<resources>
    <string name="facebook_application_id" translatable="false">315573326274245</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb315573326274245</string>

    <string name="app_name" translatable="false">Receptkönyv</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="welcomeMsg">Welcome!</string>
    <string name="welcomeMsgLong">Üdv!</string>
    <string name="loginMenuText">Switch Account</string>
    <string name="homepageMenuText">Homepage</string>
    <string name="recipesMenuText">Recipes</string>
    <string name="shoppinglistsMenuText">Shopping Lists</string>
    <string name="settingsMenuText">Settings</string>
    <string name="logoutMenuText">Logout</string>
    <string name="newRecipe">New Recipe</string>
    <string name="foodNameHint">Food name</string>
    <string name="descriptionHint">Short Description</string>
    <string name="ingredientsC">Ingredients</string>
    <string name="unitHint">bottle of</string>
    <string name="ingredientHint">mineral water</string>
    <string name="addButtonText">Add</string>
    <string name="preparationHint">Preparation</string>
    <string name="saveRecipeButtonText">Save Recipe</string>
    <string name="searchParamsTxt">Search by name, tag...</string>
    <string name="searchButtonText">Search</string>
    <string name="newButtonText">New</string>
    <string name="deleteButtonText">Delete</string>
    <string name="exampleUnit">units of</string>
    <string name="exampleIngredient">of an ingredient</string>
    <string name="nameC">Name.</string>
    <string name="plsLogin">Please log in!</string>
    <string name="language">Language</string>
    <string name="choose">Choose</string>
    <string name="deleteProfileBtnText">Delete Profile</string>
    <string name="recipeOverviewText">Overview</string>
    <string name="recipeIngredientsText">Ingredients</string>
    <string name="recipePreparationText">Preparation</string>
    <string name="imgLoadErrorNew">We couldn\'t load that image.</string>
    <string name="photoPromptTxt">Do you want to use the Camera?</string>
    <string name="photoYes">Yes</string>
    <string name="photoNo">No</string>
    <string name="photoCancel">Cancel</string>
    <string name="capture_photo">Photo:</string>
    <string name="shoppingMenuText">Shopping Lists</string>
    <string name="allRecipes">All</string>
    <string name="favRecipes">Favourites</string>
    <string name="profil">Profil</string>
    <string name="others">Other</string>
    <string name="newList">New List</string>
    <string name="searchNameTxt">Name</string>
    <string name="list_name">List Name</string>
    <string name="search_tags">Search tags...</string>
    <string name="recipeOptionsText">Options</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="newButtonTextQR">New Recipe From QR Code</string>
    <string name="qrUnsuccesful">Unsuccesful scan.</string>
    <string name="qr_share_prompt">You share your recipe with other users, using a QR code!</string>
    <string name="newRecipeWizard1">Please enter a name and a short description for your new recipe or add a recipe from a QR Code!</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="newRecipeWizard2">Please add the ingredients to the list below using the text fields and the button.</string>
    <string name="newRecipeWizard3">Please add the steps of preparing this meal using the text field and the button below.</string>
    <string name="newRecipeWizard4">You can select tags to categorise your recipes and find them easier. Tap on your desired tags to add them or write in your own tag.</string>
    <string name="newRecipeWizard5">You can take a photo of this meal if you want using the button below.</string>
    <string name="get_qr_code">Get QR Code</string>
    <string name="recipePicturesText">Pictrues</string>
    <string name="welcomePageMsg">Welcome! To start using this application, please log in or register with the button below!</string>
    <string name="continueC">Continue</string>
    <string name="chefsRecommendation">Mai ajánlat:</string>
    <string name="unfavourite">Remove From Favourites</string>
    <string name="login_unsuccessful">Sikertelen!</string>
    <string name="pic_unsuccesful">Image upload unsuccesful!</string>
    <string name="name_and_desc_empty">Name and description can\'t be empty.</string>
    <string name="qr_prompr">Please look at the QR Code!</string>
    <string name="empty_ing">You need at least one ingredient!</string>
    <string name="empty_prep">You need at least one step.</string>
    <string name="save_good">Save successful!</string>
    <string name="save_bad">Save unsuccesful!</string>
    <string name="img_camera_error">Photo unsuccesful!</string>
    <string name="search_name">Search by name...</string>
    <string name="name_list_pls">Please name your list!</string>
    <string name="error_notyet">Not Implemented.</string>
    <string name="del_good">Delete successful!</string>
    <string name="del_bad">Delete unsuccesful!</string>
    <string name="img_load_error">Error loading the image!</string>
    <string name="welcome_main">Welcome,</string>
    <string name="just_unsuccesful">Unsuccesful</string>
    <string name="no_tag">No tag</string>
    <string name="img_perm_warning">You can\'t use images if you don\'t give permission.</string>
    <string name="no_result">The search gave no results</string>
    <string name="still_no_network">Failed to connect to the network</string>
    <string name="new_recommendation">Recommend another</string>
    <string name="load_from_qr_code">Load From QR Code</string>
    <string name="you_are_offline">You are offline!</string>
    <string name="click_here_to_try_again">Try Again</string>
    <string name="qr_error">QR Scanning Unsuccesful!</string>
    <string name="del_profile_succesfull">Profile Delete Successful!</string>
</resources>
