<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientAmountRv"
        android:text="5"
        android:layout_weight="2"
        android:paddingRight="5dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientUnitRv"
        android:text="@string/exampleUnit"
        android:layout_weight="3"
        android:paddingRight="5dp"/>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientNameRv"
        android:text="@string/exampleIngredient"
        android:layout_weight="5"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleteButtonText"
        android:id="@+id/btnDeleteIngRv"/>

</LinearLayout>