<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeDisplayFragments.RecipeOptions">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            tools:context=".OpenReceptActivity"
            android:padding="5dp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/favButtonSelectedRecept"
                android:text="@string/add_to_favorites"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editButtonSelectedRecept"
                android:text="@string/edit"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/deleteButtonSelectedRecept"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_1" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/shareButtonSelectedRecept"
                android:text="@string/share"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_1" />

            <View
                android:layout_margin="5dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qr_share_prompt"
                android:textAlignment="center"
                android:textSize="30sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/qrButtonSelectedRecept"
                android:text="@string/get_qr_code"
                android:textColor="@color/white"
                android:background="@drawable/custom_button_1" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/generatedQRcode" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>