<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UjListaActivity"
    android:padding="5dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/newList"
        android:textAlignment="center"
        android:textSize="40sp"
        android:paddingBottom="30dp"
        android:layout_alignParentTop="true"
        android:id="@+id/titleNewList"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleNewList"
        android:id="@+id/listName"
        android:hint="@string/list_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/listName"
        android:id="@+id/listRecSearch"
        android:gravity="center">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:id="@+id/keresesReceptekList"
            android:hint="@string/searchNameTxt"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/keresesReceptekButtonList"
            android:text="@string/searchButtonText"
            android:background="@drawable/custom_button_1"
            android:textColor="@color/white"/>

    </LinearLayout>


    <ListView
        android:id="@+id/listReceptekForList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/listRecSearch"
        android:divider="@color/colorRecipeDivider"
        android:dividerHeight="2dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ingredientsInList"
        android:layout_below="@id/listReceptekForList"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/saveListBtn"
        android:text="@string/saveRecipeButtonText"
        android:background="@drawable/custom_button_1"
        android:textColor="@color/white"/>

</RelativeLayout>

