<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRecipeFragments.NewTagsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:text="@string/newRecipeWizard4"
                android:textAlignment="center"
                android:paddingBottom="15dp"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tagsSelectedNewRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.ChipGroup">

            </com.google.android.material.chip.ChipGroup>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/search_tags"
                android:id="@+id/searchForTags"
                android:textSize="25sp" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/tagsNewRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.ChipGroup">

            </com.google.android.material.chip.ChipGroup>


        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/nextBtn4"
            android:text="@string/next" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/backBtn3"
            android:text="@string/back" />

    </RelativeLayout>

</FrameLayout>