<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragments.KezdolapFragment"
    android:background="@drawable/gradient_bg_upside_down"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcomeMsg"
                android:id="@+id/homepageWelcomeText"
                android:textAlignment="center"
                android:textSize="35sp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Mai ajánlat:"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:visibility="invisible"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:id="@+id/dailyRecommendation"
                android:visibility="invisible"

                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_gravity="center_horizontal">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:id="@+id/recommendationImg"/>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="@color/colorPrimaryDark" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Recept Cím"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:paddingLeft="5dp"
                        android:id="@+id/recommendationTitle"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Tökéletes étel akkor ha éhesek vagyunk. Más alkalomra nem ajánljuk."
                        android:textSize="20sp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:id="@+id/recommendationDesc"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredientsC"
                        android:textStyle="bold|italic"
                        android:textSize="20sp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="1 db valami\n1 db másik  valami"
                        android:textStyle="italic"
                        android:textSize="20sp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:id="@+id/recommendationIng" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:text="@string/add_to_favorites"
                        android:layout_margin="3dp"
                        android:id="@+id/recommendedToFavBtn" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/new_recommendation"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        android:id="@+id/newRecommendationBtn"
                        android:visibility="invisible"/>

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </ScrollView>

</FrameLayout>